<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_principal" tools:context=".Principal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_direccion"
            android:hint="@string/placeholder_ip"/>


        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_puerto"
            android:inputType="number"
            android:hint="@string/placeholder_puerto"/>

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_tamano_archivo"
                android:id="@+id/label_tamano_archivo" />
            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/drop_tamanos"
                android:textAlignment="center"
                />
        </LinearLayout>
        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_numero_veces"
                android:id="@+id/label_cant_veces" />

            <Space
                android:layout_width="50px"
                android:layout_height="match_parent"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/input_cant_veces"
                android:textAlignment="center" />
        </LinearLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/resultados"
            android:id="@+id/label_informacion" />
        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_resultados"/>
        </ScrollView>

    </LinearLayout>

</FrameLayout>
